-
Bug
-
Resolution: Done
-
P2: Important
-
5.6
-
Windows 8, ICC 16.0 package 110
When compiling Qt with ICC 16.0 on Windows, the following error happens:
xilink /NOLOGO /DEBUG /DLL /SUBSYSTEM:windows /VERSION:5.6 /OUT:C:\Qt\qt5-icl16-msvc2013-x64\qtbase\plugins\iconengines\qsvgicond.dll @C:\Users\tjmaciei\AppData\Local\Temp\qsvgicond.dll.32420.79.jom Creating library C:\Qt\qt5-icl16-msvc2013-x64\qtbase\plugins\iconengines\qsvgicond.lib and object C:\Qt\qt5-icl16-msvc2013-x64\qtbase\plugins\iconengines\qsvgicond.exp qsvgiconengine.obj : error LNK2001: unresolved external symbol "const QIconEngine::`vftable'" (??_7QIconEngine@@6B@) C:\Qt\qt5-icl16-msvc2013-x64\qtbase\plugins\iconengines\qsvgicond.dll : fatal error LNK1120: 1 unresolved externals
This does not happen with ICC 15.0.4.221.
This is the same bug as was fixed in acf80b9a2b913e898ed4c4ed14d4ea79401484fe
For Gerrit Dashboard: QTBUG-48062 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
124882,3 | Fix build error with ICC 16 on Windows | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |