Fix build error with ICC 16 on Windows

This is a repeat of acf80b9a2b913e898ed4c4ed14d4ea79401484fe, but this
time it appears ICC 15 works and ICC 16 doesn't. ICC doesn't like
polymorphic, exported classes with inline constructors.

qsvgiconengine.obj : error LNK2001: unresolved external symbol "const QIconEngine::\`vftable'" (??_7QIconEngine@@6B@)

Task-number: QTBUG-48062
Change-Id: I82493c0f52084e0588352cd0c26e1293b0727242
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: ae880beb7d02141c5097ef61409fa66b2c910dd3 https://github.com/qt/qtbase/commit/ae880beb7d02141c5097ef61409fa66b2c910dd3