src/gui/image/qiconengine.cpp
@@ -1,3 +1,4 @@
+DECL|function|QIconEngine
 DECL|function|actualSize
 DECL|function|addFile
 DECL|function|addPixmap
